--- a/.github/workflows/continuous-integration-workflow.yml
+++ b/.github/workflows/continuous-integration-workflow.yml
@@ -66,7 +66,7 @@ jobs:
     - name: Firebase CLI install
       run: curl -sL firebase.tools | bash
     - name: deploy
-      run: firebase deploy --token ${{ secretes.FIREBASE_TOKEN }}
+      run: firebase deploy --project=${{ secrets.PROD_PROJECT_ID }} --token ${{ secrets.FIREBASE_TOKEN }}
     - name: Deploy Succeeded
       if: ${{ success() }}
       run: echo "successed"
