--- a/package.json
+++ b/package.json
@@ -1,14 +1,23 @@
 {
   "name": "firebase-automatic-deployment-example",
-  "version": "0.0.0",
-  "main": "index.js",
-  "repository": "https://github.com/ikkyu-3/firebase-automatic-deployment-example.git",
-  "author": "ikkyu-3 <toru.hasegawa.0521@gmail.com>",
-  "license": "MIT",
+  "version": "1.0.0",
+  "description": "My astounding Nuxt.js project",
+  "author": "ikkyu-3",
+  "private": true,
   "scripts": {
+    "dev": "nuxt",
+    "build": "nuxt build",
+    "start": "nuxt start",
+    "generate": "nuxt generate",
     "test": "jest"
   },
+  "dependencies": {
+    "nuxt": "^2.0.0"
+  },
   "devDependencies": {
-    "jest": "^26.0.1"
+    "@vue/test-utils": "^1.0.0-beta.27",
+    "babel-jest": "^24.1.0",
+    "jest": "^24.1.0",
+    "vue-jest": "^4.0.0-0"
   }
 }
