--- a/.github/workflows/continuous-integration-workflow.yml
+++ b/.github/workflows/continuous-integration-workflow.yml
@@ -63,8 +63,12 @@ jobs:
     - uses: actions/download-artifact@v2
       with:
         name: dist
+    - name: Use Node.js
+      uses: actions/setup-node@v1
+      with:
+        node-version: '12.12.0'
     - name: Firebase CLI install
-      run: curl -sL firebase.tools | bash
+      run: npm install -g firebase-tools
     - name: deploy
       run: firebase deploy --project=${{ secrets.PROD_PROJECT_ID }} --token ${{ secrets.FIREBASE_TOKEN }}
     - name: Deploy Succeeded
